add email implementation
